--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <title>Amel Neffati</title>
   <link rel="icon" type="image/png" sizes="32x32" href="http://favicons.fr/icons_/10d3e38dc89d5b8e97480efcaf2a6d81_preview_favicon-32.png">
 
